--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
 				</div>
 				<div class="box">
 					<div class="content-2">
-						<i class="fa-solid fa-store"></i><br>
+						<div class="banner-icon"><i class="fa-solid fa-store"></i></div>
 						<a>Lorem Ipsum</a>
 					</div>
 					<div class="content-2">
-						<i class="fa-solid fa-square-poll-vertical"></i><br>
+						<div class="banner-icon"><i class="fa-solid fa-square-poll-vertical"></i></div>
 						<a>Dolor Sitema</a>
 					</div>
 					<div class="content-2">
-						<i class="fa-solid fa-calendar-minus"></i><br>
+						<div class="banner-icon"><i class="fa-solid fa-calendar-minus"></i></div>
 						<a>Sedare<br> Perspiciatis</a>
 					</div>
 					<div class="content-2">
-						<i class="fa-solid fa-paint-roller"></i><br>
+						<div class="banner-icon"><i class="fa-solid fa-paint-roller"></i></div>
 						<a>Magni Dolores</a>
 					</div>
 					<div class="content-2">
-						<i class="fa-solid fa-database"></i><br>
+						<div class="banner-icon"><i class="fa-solid fa-database"></i></div>
 						<a>Nemos<br> Enimade</a>
 					</div>
 				</div>
